_sass/base.scss
$bg_dark: #aaaaaa;
$bg_mid: #dddddd;
$bg_light: #ffffff;

$fg_dark: #000000;

$body_font: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";

body {
  background: $bg_dark;
  color: $fg_dark;
  font-family: $body_font;
  margin: 0px;
}

a,
a:active,
a:focus,
a:hover,
a:visited {
  text-decoration: none;
  font-weight: 600;
  color: $fg_dark;
}

.content {
  background: $bg_light;
  max-width: 800px;
  min-height: 100vh;
  position: relative;
  margin: auto;
  padding: 1em;
  box-shadow: -1em 0 1em 0 rgba(0, 0, 0, 0.2), 1em 0 1em 0 rgba(0, 0, 0, 0.2)
}

// loosely based off of the macvim colorscheme
.highlight {
  margin: 5px;
  background-color: #1a1a1a; // Grey10
  color: #7f7f7f; // Grey50
  padding: 4px;
  
  // comment
  .cm,
  .c1 {
    color: #7ac5cd; // CadetBlue3
    font-style: italic;
  }

  // string
  .dl,
  .s2,
  .cpf,
  .s {
    color: #4a708b; // SkyBlue4
  }

  // constant
  .mi,
  .mh {
    color: #ffc125; // Goldenrod1
  }

  // preproc
  .cp {
    color: #1874cd; // DodgerBlue3
  }
  
  // boolean
  // .kc {
  //  color: #8b0a50; // DeepPink4
  // }

  // type
  .kt {
    color: #008b8b; // Cyan4
    font-weight: bold;
  }

  // statement
  .nl,
  .k {
    color: #9b30ff; // Purple1
    font-weight: bold;
  }

  // identifier
  .nb,
  .nf,
  .nv,
  .kd {
    color: #458b74; // Aquamarine4
  }
}

.footnotes {
  border-top: 1px solid $bg_mid;
  font-size: small;
}

.footnote {
  font-size: smaller;
  text-decoration: none;
}

li p {
  margin: 0;
}

hr {
  height: 1px;
  border: none;
  color: $bg_mid;
  background-color: $bg_mid;
}

img {
  max-width: 100%;
  display: inline-block;
}

code {
  padding: 2px;
}

table {
  border: 1px solid $bg_dark;
  width: 100%;
  table-layout: auto;
  font-family: monospace;

  tr {
    height: 2rem;
  }

  td,
  th {
    padding-left: 0.5rem;
    vertical-align: middle;
  }

  tr:nth-child(odd) {
    background-color: $bg_mid;
  }

  th,
  tr:nth-child(even) {
    background-color: $bg_light;
  }
}

